k8s/deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-eks-api
  labels:
    app: laravel-eks-api
spec:
  type: NodePort
  selector:
    app: laravel-eks-api
  ports:
    - port: 8080
      targetPort: 8080 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: laravel-eks-api
  name: laravel-eks-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-eks-api
  template:
    metadata:
      labels:
        name: laravel-eks-api
        app: laravel-eks-api
    spec:
      containers:
        - name: laravel-eks-api
          image: 396608808038.dkr.ecr.us-east-1.amazonaws.com/laravel-eks:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          command:
          - sh
          - -c
          - |
            php-fpm & nginx -g 'daemon off;'
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 20
          resources:
            limits:
              cpu: 700m
              memory: 800Mi
            requests:
              cpu: 500m
              memory: 800Mi
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: nginx-conf
          configMap:
            name: laravel-eks-api-nginx
